Minor update names

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -43,12 +43,12 @@
   place: Ottawa, Ontario, Canada
   tags: [CO]
 
-- name: ICSE-NIER
+- name: ICSE-JF
   description: International Conference on Software Engineering - Journal-first Papers
   year: 2025
   link: https://conf.researchr.org/track/icse-2025/icse-2025-journal-first-papers
   deadline: 
-  - "2024-10-10 23:59"
+  - "2024-10-21 23:59"
   date: April 26 - May 4, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
