Added the readme file on how to make the pull requests.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Software Engineering Deadlines
 description: Countdowns to top Software Engineering deadlines.
-author: Sivana Hamer
+author: Sivana Hamer, Imranur Rahman
 
 domain: "se-deadlines.github.io"
 baseurl: ""
