Try to fix MSR deadlines

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -182,7 +182,7 @@
   place: Lisbon, Portugal
   tags: [CO]
 
-- name: MSR-D&T
+- name: MSR-DT
   description: Mining Software Repositories - Data and Tool Showcase Track
   year: 2024
   link: https://2024.msrconf.org/track/msr-2024-data-and-tool-showcase-track
