--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -8,7 +8,7 @@
   deadline: 
   - "2024-03-15 23:59"
   - "2024-07-26 23:59"
-  date: April 26 - May 4, 2025
+  date: April 27 - May 3, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
 
@@ -18,7 +18,7 @@
   link: https://conf.researchr.org/track/icse-2025/icse-2025-software-engineering-in-practice
   deadline: 
   - "2024-10-10 23:59"
-  date: April 26 - May 4, 2025
+  date: April 27 - May 3, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
 
@@ -29,7 +29,7 @@
   link: https://conf.researchr.org/track/icse-2025/icse-2025-software-engineering-in-society
   deadline: 
   - "2024-10-10 23:59"
-  date: April 26 - May 4, 2025
+  date: April 27 - May 3, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
 
@@ -39,7 +39,7 @@
   link: https://conf.researchr.org/track/icse-2025/icse-2025-new-ideas-and-emerging-results
   deadline: 
   - "2024-10-10 23:59"
-  date: April 26 - May 4, 2025
+  date: April 27 - May 3, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
 
@@ -52,6 +52,55 @@
   date: April 26 - May 4, 2025
   place: Ottawa, Ontario, Canada
   tags: [CO]
+
+- name: ICSE-DS
+  description: International Conference on Software Engineering - Doctoral Symposium
+  year: 2025
+  link: https://conf.researchr.org/track/icse-2025/icse-2025-doctoral-symposium
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO]
+
+- name: ICSE-T&TB
+  description: International Conference on Software Engineering - Tutorials and Technical Briefings
+  year: 2025
+  link: https://conf.researchr.org/track/icse-2025/icse-2025-tutorials
+  deadline: 
+  - "2024-10-10 23:59"
+  date: April 26 - May 4, 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO]
+
+- name: ICSE-NFS
+  description: International Conference on Software Engineering - New Faculty Symposium
+  year: 2025
+  link: https://conf.researchr.org/track/icse-2025/icse-2025-new-faculty-symposium
+  deadline: ["TBA"]
+  date: April 26 - May 4, 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO]
+
+- name: ICSE-SRC
+  description: International Conference on Software Engineering - Student Research Competition
+  year: 2025
+  link: https://conf.researchr.org/track/icse-2025/icse-2025-SRC
+  deadline: 
+  - "2024-11-15 23:59"
+  date: April 26 - May 4, 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO]
+
+- name: SMeW
+  description: Student Mentoring Workshop
+  year: 2025
+  link: https://conf.researchr.org/track/icse-2025/icse-2025-smew---student-mentoring-workshop
+  deadline: 
+  - "2024-10-21 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
 
 # ESEC/FSE
 - name: FSE
@@ -94,27 +143,334 @@
   place:  Porto de Galinhas, Brazil, Brazil
   tags: [CO]
 
+- name: SE 2030
+  description: Software Engineering in 2030
+  year: 2024
+  link: https://conf.researchr.org/home/2030-se
+  deadline: 
+  - "2024-04-05 23:59"
+  date: July 15 - 19, 2024 with FSE
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [WO]
+
+- name: FaSE4Games
+  description: International Workshop Foundations of Applied Software Engineering for Games
+  year: 2024
+  link: https://fase4games.quest/
+  deadline: 
+  - "2024-03-27 23:59"
+  date: July 15 - 19, 2024 with FSE
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [WO]
+
+- name: SEA4DQ
+  description: International Workshop on Software Engineering and AI for Data Quality
+  year: 2024
+  link: https://sea4dq.github.io/
+  deadline: 
+  - "2024-04-05 23:59"
+  date: July 15 - 19, 2024 with FSE
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [WO]
+
+
+- name: MODAL
+  description: Infrastructure for Mobile App Data Collection & Analysis
+  year: 2024
+  link: https://2024.esec-fse.org/home/modal-2024-fse
+  deadline: 
+  - "2024-04-29 23:59"
+  date: July 15 - 19, 2024 with FSE
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [WO]
+
+- name: QSE-NE
+  description: International Workshop on Quantum Software Engineering - The Next Evolution
+  year: 2024
+  link: https://sites.google.com/view/qse-ne
+  deadline: 
+  - "2024-04-25 23:59"
+  date: July 15 - 19, 2024 with FSE
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [WO]
+
+#PROMISE
+- name: PROMISE
+  description: International Conference on Predictive Models and Data Analytics in Software Engineering
+  year: 2024
+  ink: https://conf.researchr.org/home/promise-2024
+  deadline: 
+   - "2024-03-23 23:59"
+  date: July 16, 2024 co-hosted with FSE 2024
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [CO]
+
+#AIware
+- name: AIware
+  description: International Conference on AIware - Main Track
+  year: 2024
+  link: https://conf.researchr.org/home/aiware-2024
+  deadline: 
+  - "2024-03-29 23:59"
+  date: July 15 - 19, 2024 co-hosted with FSE 2024
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [CO]
+
+- name: AIware-CT
+  description: International Conference on AIware - Challenge Track
+  year: 2024
+  link: https://2024.aiwareconf.org/track/aiware-2024-challenge-track
+  deadline: 
+  - "2024-04-24 23:59"
+  date: July 15 - 19, 2024 co-hosted with FSE 2024
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [CO]
+
+- name: AIware-ISDT
+  description: International Conference on AIware - Industry Statements and Demo Track
+  year: 2024
+  link: https://2024.aiwareconf.org/track/aiware-2024-industry-demo-track
+  deadline: 
+  - "2024-04-30 23:59"
+  date: July 15 - 19, 2024 co-hosted with FSE 2024
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [CO]
+
+- name: AIware-LBAT
+  description: International Conference on AIware - Late Breaking Arxiv Track
+  year: 2024
+  link: https://2024.aiwareconf.org/track/aiware-2024-late-breaking-arxiv-track
+  deadline: 
+  - "2024-06-10 23:59"
+  date: July 15 - 19, 2024 co-hosted with FSE 2024
+  place: Porto de Galinhas, Brazil, Brazil
+  tags: [CO]
+
+
 # ESEIW&ESEM
 - name: ESEM
-  description: International Symposium on Empirical Software Engineering and Measurement
+  description: International Symposium on Empirical Software Engineering and Measurement - Technical Papers Track
   year: 2024
   link: https://conf.researchr.org/home/esem-2024
   deadline: 
-  - "2024-04-26 23:59"
+  - "2024-05-02 23:59"
   date: October 20-25, 2024
   place: Barcelona, Spain
   tags: [CO]
 
+- name: ESEM-ERVR
+  description: International Symposium on Empirical Software Engineering and Measurement - Emerging Results, Vision and Reflection Papers
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-emerging-results-vision-and-reflection-papers
+  deadline: 
+  - "2024-05-30 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+- name: ESEM-RR
+  description: International Symposium on Empirical Software Engineering and Measurement - Registered Reports
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-registered-reports
+  deadline: 
+  - "2024-05-06 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+- name: ESEM-JFP
+  description: International Symposium on Empirical Software Engineering and Measurement - Journal-First Papers
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-journal-first
+  deadline: 
+  - "2024-07-01 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+- name: ESEM-IGC
+  description: International Symposium on Empirical Software Engineering and Measurement - Industry, Government, and Community
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-industry-government-community
+  deadline: 
+  - "2024-07-01 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+- name: ESEM-RP
+  description: International Symposium on Empirical Software Engineering and Measurement - Research Projects
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-esem-research-projects
+  deadline: 
+  - "2024-06-15 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+- name: ESEM-IDoESE
+  description: International Doctoral Symposium on Empirical Software Engineering
+  year: 2024
+  link: https://conf.researchr.org/track/esem-2024/esem-2024-doctoral-symposium
+  deadline: 
+  - "2024-06-26 23:59"
+  date: October 20-25, 2024
+  place: Barcelona, Spain
+  tags: [CO]
+
+
 # ASE
 - name: ASE
-  description: International Conference on Automated Software Engineering
+  description: International Conference on Automated Software Engineering - Research Papers
   year: 2024
-  link: https://conf.researchr.org/home/ase-2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-research
   deadline: 
   - "2024-05-31 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-IS
+  description: International Conference on Automated Software Engineering - Industry Showcase
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-industry-showcase
+  deadline: 
+  - "2024-07-12 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-JF
+  description: International Conference on Automated Software Engineering - Journal-first Papers
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-journal-first-papers
+  deadline: 
+  - "2024-07-02 23:59"
   date: October 20-25, 2024
   place: Sacramento, California, United States
   tags: [CO]
+
+- name: ASE-TD
+  description: International Conference on Automated Software Engineering - Tool Demonstrations
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-tool-demonstrations
+  deadline: 
+  - "2024-06-26 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-NIER
+  description: International Conference on Automated Software Engineering - New Ideas and Emerging Results
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-nier-track
+  deadline: 
+  - "2024-06-10 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-SRC
+  description: International Conference on Automated Software Engineering - Student Research Competition
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-student-research-competition-
+  deadline: 
+  - "2024-07-22 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-DS
+  description: International Conference on Automated Software Engineering - Doctoral Symposium
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-doctoral-symposium
+  deadline: 
+  - "2024-08-01 23:59"
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: ASE-NFS
+  description: International Conference on Automated Software Engineering - New Faculty Symposium
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024-new-faculty-symposium
+  deadline: ["TBA"]
+  date: October 27-November 1, 2024
+  place: Sacramento, California, United States
+  tags: [CO]
+
+- name: RENE
+  description: Replications and Negative Results
+  year: 2024
+  link: https://conf.researchr.org/track/ase-2024/ase-2024--workshop--rene
+  deadline: 
+  - "2024-08-02 23:59"
+  date: October 27-November 1, 2024 with ASE 2024
+  place: Sacramento, California, United States
+  tags: [WO]
+
+- name: ASYDE
+  description: International Workshop on Automated and verifiable Software sYstem DEvelopment
+  year: 2024
+  link: https://asyde-series.github.io/asyde2024/
+  deadline: 
+  - "2024-07-28 23:59"
+  date: October 27-November 1, 2024 with ASE 2024
+  place: Sacramento, California, United States
+  tags: [WO]
+
+- name: HCSE&CS
+  description: Workshop on Human Centric Software Engineering and Cyber Security
+  year: 2024
+  link: https://research.csiro.au/cybersecurity-quantum-systems/hcse-cs-2024/
+  deadline: 
+  - "2024-08-02 23:59"
+  date: October 27-November 1, 2024 with ASE 2024
+  place: Sacramento, California, United States
+  tags: [WO]
+
+- name: A-Mobile
+  description: International Workshop on Advances in Mobile App Analysis
+  year: 2024
+  link: https://research.csiro.au/cybersecurity-quantum-systems/hcse-cs-2024/
+  deadline: 
+  - "2024-08-02 23:59"
+  date: October 27-November 1, 2024 with ASE 2024
+  place: Sacramento, California, United States
+  tags: [WO]
+
+- name: VARSE
+  description: International Workshop on Virtual and Augmented Reality Software Engineering
+  year: 2024
+  link: https://varse-events.github.io/varse2024/
+  deadline: 
+  - "2024-08-10 23:59"
+  date: October 27-November 1, 2024 with ASE 2024
+  place: Sacramento, California, United States
+  tags: [WO]
+
+# CSEE&T
+- name: CSEE&T
+  description: Conference on Software Engineering Education and Training
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/cseet-2025
+  deadline: 
+  - "2024-10-03 23:59"
+  date: April 27 - May 3, 2025  co-located with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO]
+
+#SCORED
+- name: SCORED
+  description: Workshop on Software Supply Chain Offensive Research and Ecosystem Defenses
+  year: 2024
+  link: https://scored.dev/
+  deadline: 
+  - "2024-06-27 23:59"
+  date: October 18, 2024 with ACM CCS 2024
+  place: Salt Lake City, Utah, United States
+  tags: [WO]
+
 
 # ICSMEs
 - name: ICSME
@@ -155,7 +511,7 @@
   year: 2024
   link: https://secdev.ieee.org/2024/cfp/
   deadline: 
-  - "2023-05-14 23:59"
+  - "2024-05-14 23:59"
   date: October 7-10, 2024
   place: Pittsburgh, Pennsylvania, United States
   tags: [CO]
@@ -166,7 +522,78 @@
   year: 2024
   link: https://issre.github.io/2024/calls_cfp-research.html
   deadline: 
-  - "2023-05-03 23:59"
+  - "2024-06-05 23:59"
   date: October 28-31, 2024
   place: Tsukuba, Japan
   tags: [CO]
+
+#SANER
+- name: SANER
+  description: International Conference on Software Analysis, Evolution and Reengineering - Research Papers
+  year: 2025
+  ink: https://conf.researchr.org/track/saner-2025/saner-2025-papers
+  deadline: 
+  - "2024-10-04 23:59"
+  date: March 4 - 7, 2025
+  place: Montréal, Québec, Canada
+
+
+#CHASEs
+- name: CHASE
+  description: International Conference on Cooperative and Human Aspects of Software Engineering - Full Papers
+  year: 2025
+  ink: https://conf.researchr.org/track/chase-2025/chase-2025-papers
+  deadline: ["TBA"]
+  date: April 27 - May 3, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+- name: CHASE-SP
+  description: International Conference on Cooperative and Human Aspects of Software Engineering - Short Papers
+  year: 2025
+  link: https://conf.researchr.org/track/chase-2025/chase-2025-short-papers
+  deadline: ["TBA"]
+  date: April 27 - May 3, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+- name: CHASE-JF
+  description: International Conference on Cooperative and Human Aspects of Software Engineering - Journal First
+  year: 2025
+  link: https://conf.researchr.org/track/chase-2025/chase-2025-journal-first
+  deadline: ["TBA"]
+  date: April 27 - May 3, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+#SEAMS
+- name: SEAMS
+  description: International Conference on Software Engineering for Adaptive and Self-Managing Systems- Research Track
+  year: 2025
+  ink: https://conf.researchr.org/track/seams-2025/seams-2025-research-track
+  deadline: ["TBA"]
+  date: April 27 - May 3, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+- name: SEAMS-AT
+  description: International Conference on Software Engineering for Adaptive and Self-Managing Systems - Artifact Track
+  year: 2025
+  link: https://conf.researchr.org/track/seams-2025/seams-2025-artifact-track
+  deadline: ["TBA"]
+  date: April 27 - May 3, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+#MSR
+- name: MSR
+  description: Mining Software Repositories - Research Papers
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-papers
+  deadline: ["TBA"]
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+
+- name: MSR-MCP
+  description: Mining Software Repositories - Mining Challenge Proposals
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-mining-challenge-proposals
+  deadline: 
+   - "2024-08-19 23:59"
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
