Update naming page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Software Engineering Deadlines
-description: Countdowns to top Software Engineering deadlines.
+title: Software Engineering Research Venues Deadlines
+description: Countdowns to top Software Engineering Research Venues deadlines.
 author: Sivana Hamer, Imranur Rahman
 
 domain: "se-deadlines.github.io"
