--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -6,10 +6,11 @@
   year: 2025
   link: https://conf.researchr.org/track/icse-2025/icse-2025-research-track
   deadline: 
-  - "2024-03-15 23:59"
-  - "2024-07-26 23:59"
+  - "2024-03-22 23:59"
+  - "2024-08-02 23:59"
   date: April 27 - May 3, 2025
   place: Ottawa, Ontario, Canada
+  note: Mandatory abstract deadline on March 15 (first deadline) and July 26 (second deadline) 2024.
   tags: [CO, RPT]
 
 - name: ICSE-SEIP
@@ -107,9 +108,10 @@
   year: 2025
   link: https://conf.researchr.org/track/fse-2025/fse-2025-research-papers
   deadline: 
-  - "2024-09-05 23:59"
+  - "2024-09-12 23:59"
   date: July 23 - 27, 2025
   place: Trondheim, Norway
+  note: Mandatory abstract deadline on September 5 2024.
   tags: [CO,RPT]
 
 - name: FSE-IP
@@ -199,9 +201,10 @@
   year: 2024
   ink: https://conf.researchr.org/home/promise-2024
   deadline: 
-   - "2024-03-23 23:59"
+   - "2024-03-28 23:59"
   date: July 16, 2024 co-hosted with FSE 2024
   place: Porto de Galinhas, Brazil, Brazil
+  note: Mandatory abstract deadline on March 22 2024.
   tags: [CO, RPT, IPT, NIER, JFT]
 
 #AIware
@@ -210,9 +213,10 @@
   year: 2024
   link: https://2024.aiwareconf.org/track/aiware-2024-papers
   deadline: 
-  - "2024-03-29 23:59"
+  - "2024-04-05 23:59"
   date: July 15 - 19, 2024 co-hosted with FSE 2024
   place: Porto de Galinhas, Brazil, Brazil
+  note: Optional intent submission on March 29 2024.
   tags: [CO, RPT]
 
 - name: AIware-CT
@@ -240,6 +244,7 @@
   year: 2024
   link: https://2024.aiwareconf.org/track/aiware-2024-late-breaking-arxiv-track
   deadline: 
+  - "2024-05-10 23:59"
   - "2024-06-10 23:59"
   date: July 15 - 19, 2024 co-hosted with FSE 2024
   place: Porto de Galinhas, Brazil, Brazil
@@ -252,9 +257,10 @@
   year: 2024
   link: https://conf.researchr.org/track/esem-2024/esem-2024-technical-track
   deadline: 
-  - "2024-05-02 23:59"
+  - "2024-05-06 23:59"
   date: October 20-25, 2024
   place: Barcelona, Spain
+  note: Mandatory abstract deadline on May 2 2024.
   tags: [CO, RPT]
 
 - name: ESEM-ERVR
@@ -262,7 +268,8 @@
   year: 2024
   link: https://conf.researchr.org/track/esem-2024/esem-2024-emerging-results-vision-and-reflection-papers
   deadline: 
-  - "2024-05-30 23:59"
+  - "2024-06-07 23:59"
+  note: Mandatory abstract deadline on May 30 2024.
   date: October 20-25, 2024
   place: Barcelona, Spain
   tags: [CO, NIER]
@@ -324,8 +331,9 @@
   year: 2024
   link: https://conf.researchr.org/track/ase-2024/ase-2024-research
   deadline: 
-  - "2024-05-31 23:59"
+  - "2024-06-07 23:59"
   date: October 27-November 1, 2024
+  note: Mandatory abstract deadline on May 31 2024.
   place: Sacramento, California, United States
   tags: [CO, RPT]
 
@@ -364,9 +372,10 @@
   year: 2024
   link: https://conf.researchr.org/track/ase-2024/ase-2024-nier-track
   deadline: 
-  - "2024-06-10 23:59"
+  - "2024-06-17 23:59"
   date: October 27-November 1, 2024
   place: Sacramento, California, United States
+  note: Mandatory abstract deadline on June 14 2024.
   tags: [CO, NIER]
 
 - name: ASE-SRC
@@ -454,9 +463,10 @@
   year: 2025
   link: https://conf.researchr.org/home/icse-2025/cseet-2025
   deadline: 
-  - "2024-10-03 23:59"
+  - "2024-10-10 23:59"
   date: April 27 - May 3, 2025  co-located with ICSE 2025
   place: Ottawa, Ontario, Canada
+  note: Mandatory abstract deadline on October 3 2024.
   tags: [CO, EDT]
 
 #SCORED
@@ -477,9 +487,10 @@
   year: 2024
   link: https://conf.researchr.org/track/icsme-2024/icsme-2024-papers
   deadline: 
-  - "2024-04-04 23:59"
+  - "2024-04-11 23:59"
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
+  note: Mandatory abstract deadline on April 4 2024.
   tags: [CO, RPT]
 
 - name: ICSME-NIER
@@ -487,9 +498,10 @@
   year: 2024
   link: https://conf.researchr.org/track/icsme-2024/icsme-2024-new-ideas-and-emerging-results-track
   deadline: 
-  - "2024-06-20 23:59"
+  - "2024-06-25 23:59"
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
+  note: Mandatory abstract deadline on June 20 2024.
   tags: [CO, NIER]
 
 - name: ICSME-ROSE
@@ -505,12 +517,12 @@
 - name: ICSME-RRT
   description: International Conference on Software Maintenance and Evolution - Registered Reports Track
   year: 2024
-  link: https://conf.researchr.org/track/icsme-2024/icsme-2024-doctoral-symposium-track
+  link: https://conf.researchr.org/track/icsme-2024/icsme-2024-registered-reports-track
   deadline: 
-  - "2024-07-19 23:59"
+  - "2024-05-31 23:59"
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
-  tags: [CO, DOS]
+  tags: [CO, RRT]
 
 
 - name: ICSME-TDT
@@ -518,7 +530,7 @@
   year: 2024
   link: https://conf.researchr.org/track/icsme-2024/icsme-2024-tool-demo-track
   deadline: 
-  - "2024-07-19 23:59"
+  - "2024-06-27 23:59"
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
   tags: [CO, TOT]
@@ -531,6 +543,7 @@
   - "2024-06-26 23:59"
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
+  note: Mandatory abstract deadline on June 20 2024.
   tags: [CO, IPT]
 
 - name: ICSME-JF
@@ -542,16 +555,6 @@
   date: October 6-11, 2024
   place: Flagstaff, Arizona, United States
   tags: [CO, JFT]
-
-- name: ICSME-RRT
-  description: International Conference on Software Maintenance and Evolution - Journal First Track
-  year: 2024
-  link: https://conf.researchr.org/track/icsme-2024/icsme-2024-registered-reports-track
-  deadline: 
-  - "2024-05-31 23:59"
-  date: October 6-11, 2024
-  place: Flagstaff, Arizona, United States
-  tags: [CO, RRT]
 
 # ISSTA
 - name: ISSTA
@@ -613,9 +616,10 @@
   year: 2025
   ink: https://conf.researchr.org/track/saner-2025/saner-2025-papers
   deadline: 
-  - "2024-10-04 23:59"
+  - "2024-10-11 23:59"
   date: March 4 - 7, 2025
   place: Montréal, Québec, Canada
+  note: Mandatory abstract deadline on October 4 2024.
   tags: [CO, RPT]
 
 #CHASEs
