--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -116,32 +116,32 @@
 
 - name: FSE-IP
   description: International Conference on the Foundations of Software Engineering - Industry Papers
-  year: 2024
-  link: https://2024.esec-fse.org/track/fse-2024-industry
+  year: 2025
+  link: https://conf.researchr.org/track/fse-2025/fse-2025-industry-papers
   deadline: 
-  - "2024-02-08 23:59"
+  - "2025-01-15 23:59"
   date: July 15 - 19, 2024
-  place:  Porto de Galinhas, Brazil, Brazil
+  place: Trondheim, Norway
   tags: [CO,IPT]
 
 - name: FSE-IVR
   description: International Conference on the Foundations of Software Engineering - Ideas, Visions and Reflections Track 
-  year: 2024
-  link: https://2024.esec-fse.org/track/fse-2024-ideas--visions-and-reflections
+  year: 2025
+  link: https://conf.researchr.org/track/fse-2025/fse-2025-ideas-visions-and-reflections
   deadline: 
-  - "2024-01-28 23:59"
+  - "2025-01-16 23:59"
   date: July 15 - 19, 2024
-  place:  Porto de Galinhas, Brazil, Brazil
+  place: Trondheim, Norway
   tags: [CO, NIER]
 
 - name: FSE-JF
   description: International Conference on the Foundations of Software Engineering - Journal First Papers 
-  year: 2024
-  link: https://2024.esec-fse.org/track/fse-2024-journal-first
+  year: 2025
+  link: https://conf.researchr.org/track/fse-2025/fse-2025-journal-first
   deadline: 
-  - "2024-03-25 23:59"
+  - "2025-03-04 23:59"
   date: July 15 - 19, 2024
-  place:  Porto de Galinhas, Brazil, Brazil
+  place: Trondheim, Norway
   tags: [CO, JFT]
 
 - name: SE 2030
@@ -398,15 +398,6 @@
   place: Sacramento, California, United States
   tags: [CO, DOS]
 
-- name: ASE-NFS
-  description: International Conference on Automated Software Engineering - New Faculty Symposium
-  year: 2024
-  link: https://conf.researchr.org/track/ase-2024/ase-2024-new-faculty-symposium
-  deadline: ["TBA"]
-  date: October 27-November 1, 2024
-  place: Sacramento, California, United States
-  tags: [CO, NFS]
-
 - name: RENE
   description: Replications and Negative Results
   year: 2024
@@ -564,8 +555,8 @@
   deadline: 
   - "2023-12-15 23:59"
   - "2024-04-12 23:59"
-  date: September 16-20, 2024
-  place: Vienna, Austria
+  date: July 23 - 27, 2025 co-located with FSE 2025
+  place: Trondheim, Norway
   tags: [CO, RPT, EXPT, REST]
 
 # SecDev
@@ -634,22 +625,15 @@
   note: Recommended abstract deadline on November 1 2024.
   tags: [CO, RPT, SPT, NIER]
 
-- name: CHASE-JFF
-  description: International Conference on Cooperative and Human Aspects of Software Engineering - Journal Fast Track and Journal First
-  year: 2025
-  link: https://conf.researchr.org/track/chase-2025/chase-2025-papers
-  deadline: ["TBA"]
-  date: April 27 - May 3, 2025 with ICSE 2025
-  place: Ottawa, Ontario, Canada
-  tags: [CO, JFT]
-
 #SEAMS
 - name: SEAMS
   description: International Conference on Software Engineering for Adaptive and Self-Managing Systems- Research Track
   year: 2025
   link: https://conf.researchr.org/track/seams-2025/seams-2025-research-track
-  deadline: ["TBA"]
+  deadline: 
+    - "2024-10-08 23:59"
   date: April 27 - May 3, 2025 with ICSE 2025
+  note: Mandatory abstract deadline on October 1 2024.
   place: Ottawa, Ontario, Canada
   tags: [CO, RPT]
 
@@ -665,10 +649,54 @@
 
 #MSR
 - name: MSR
-  description: Mining Software Repositories - Research Papers
+  description: Mining Software Repositories - Technical Papers
   year: 2025
-  link: https://2025.msrconf.org/track/msr-2025-papers
+  link: https://2025.msrconf.org/track/msr-2025-technical-papers
+  deadline: 
+    - "2024-11-09 23:59"
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  note: Mandatory abstract deadline on November 6, 2024.
+  tags: [CO, RPT]
+
+- name: MSR-DTST
+  description: Mining Software Repositories - Data and Tool Showcase Track
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-data-and-tool-showcase-track
+  deadline: 
+    - "2024-12-02 23:59"
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  note: Mandatory abstract deadline on November 29, 2024.
+  tags: [CO, TOT, ART]
+
+- name: MSR-IT
+  description: Mining Software Repositories - Industry Track
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-industry-track
+  deadline: 
+    - "2024-12-06 23:59"
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [CO, JFT]
+
+
+- name: MSR-RR
+  description: Mining Software Repositories - Registered Reports
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-registered-reports
+  deadline: 
+    - "2024-12-05 23:59"
+  date: April 28 - April 29, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  note: There are multiple deadlines for different stages (check the call for papers).
+  tags: [CO, RRT]
+
+- name: MSR-VR
+  description: Mining Software Repositories - Vision and Reflection
+  year: 2025
+  link: https://2025.msrconf.org/track/msr-2025-vision-and-reflection
   deadline: ["TBA"]
   date: April 28 - April 29, 2025 with ICSE 2025
   place: Ottawa, Ontario, Canada
-  tags: [CO, RPT]
+  tags: [CO, NIER]
