--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -112,6 +112,329 @@
   place: Ottawa, Ontario, Canada
   tags: [WO]
 
+
+- name: AIOps
+  description: International Workshop on Cloud Intelligence / AIOps
+  year: 2025
+  link: https://cloudintelligenceworkshop.org/index.html
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+
+- name: APR
+  description: International Workshop on Automated Program Repair
+  year: 2025
+  link: https://program-repair.org/workshop-2025/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: BotSE
+  description: International Workshop on Bots in Software Engineering
+  year: 2025
+  link: http://botse.org/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: DeepTest
+  description: International Workshop on Deep Learning for Testing and Testing for Deep Learning
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/deeptest-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: Designing
+  description: International Workshop on Designing Software
+  year: 2025
+  link: https://designing2025.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: EnCyCriS
+  description: International Workshop on Engineering and Cybersecurity of Critical Systems
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/encycris-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: FinanSE
+  description: International Workshop on Engineering and Cybersecurity of Critical Systems
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/finanse-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: FTW
+  description: International Flaky Tests Workshop
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/ftw-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: Gamify
+  description: International Workshop on Gamification in Software Development, Verification, and Validation
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/gamify-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: GAS
+  description: International Workshop on Games and Software Engineering
+  year: 2025
+  link: https://sites.google.com/view/icsegasworkshop2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+- name: GE
+  description: Workshop on Gender Equality, Diversity, and Inclusion in Software Engineering
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/ge-icse-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: GI
+  description: International Workshop on Genetic Improvement
+  year: 2025
+  link: https://geneticimprovementofsoftware.com/events/icse2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: GREENS
+  description: International Workshop on Green and Sustainable Software
+  year: 2025
+  link: https://greensworkshop.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: IDE
+  description: IDE Workshop
+  year: 2025
+  link: https://ide-workshop.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: IWSiB
+  description: International Workshop on Software-intensive Business
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/iwsib-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: LLM4Code
+  description: International Workshop on Large Language Model For Code
+  year: 2025
+  link: https://llm4code.github.io/
+  deadline: ["TBA"]
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: MO2RE
+  description: Workshop on Multi-disciplinary, Open, and IntegRatEd Requirements Engineering
+  year: 2025
+  link: https://mo2re.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: NLBSE
+  description: International Workshop on NL-based Software Engineering
+  year: 2025
+  link: https://nlbse2025.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: NSE
+  description: International Workshop on Neuro-Symbolic Software Engineering
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/nse-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: Q-SE
+  description: International Workshop on Quantum Software Engineering
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/q-se-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: RAIE
+  description: International Workshop on Responsible AI Engineering
+  year: 2025
+  link: https://raiengineering.github.io/RAIE-Series/RAIE2025/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: RAISE
+  description: International Workshop on Requirements engineering for AI-powered SoftwarE
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/raise-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  note: Abstract deadline on November 4 2024.
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: RoSE
+  description: International Workshop on Robotics Software Engineering
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/rose-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SATrends
+  description: International Workshop New Trends in Software Architecture
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/satrends-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SBFT
+  description: International Workshop on Search-Based and Fuzz Testing
+  year: 2025
+  link: https://sbft25.github.io/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SE4ADS
+  description: International Workshop on Software Engineering for Autonomous Driving Systems
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/se4ads-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SERP4IoT
+  description: International Workshop on Software Engineering Research & Practices for the Internet of Things
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/serp4iot-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SESESoS
+  description: International Workshop on Software Engineering for Systems-of-Systems and Software Ecosystems
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/sesos-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: STATIC
+  description: International Workshop on Software Engineering for Systems-of-Systems and Software Ecosystems
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/static-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  note: Abstract deadline on November 4 2024.
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: SVM
+  description: International Workshop on Software Vulnerability Management
+  year: 2025
+  link: https://conf.researchr.org/home/icse-2025/svm-2025
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: WETSEB
+  description: International Workshop on Emerging Trends in Software Engineering for Blockchain
+  year: 2025
+  link: https://www.agile-group.org/wetseb2025/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
+  - name: WSESE
+  description: International Workshop on Methodological Issues with Empirical Studies in Software Engineering
+  year: 2025
+  link: https://2025.ese-workshops.org/
+  deadline: 
+  - "2024-11-11 23:59"
+  date: April 26 - May 4, 2025 with ICSE 2025
+  place: Ottawa, Ontario, Canada
+  tags: [WO]
+
 # ESEC/FSE
 - name: FSE
   description: International Conference on the Foundations of Software Engineering - Research Papers
